tests/script_runtime_errors/arr_bad_idx/error.txt
Error: 
    1 | event[42]
      |       ^^ Array index out of bounds, got index 42 but expected an index in the range 0:3
